barcode for ean13 complete with scalable ui and text vlue on the button on barcode.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body style="font-family: sans-serif; padding: 2rem;">
     <h1>My Web Components Library</h1>
 
-    <my-button>Click Me</my-button>
+    <dami-barcode type value="123456733456"></dami-barcode>
 
     <script>
       document.addEventListener('myclick', () => {
