ean8 implementation done.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>My Web Components Library</h1>
 
     <dami-barcode type value="123456733456"></dami-barcode>
+    <dami-barcode type="ean8" value="9234567"></dami-barcode>
 
     <script>
       document.addEventListener('myclick', () => {
