barcode for UPC-E done.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   <body style="font-family: sans-serif; padding: 2rem;">
     <h1>My Web Components Library</h1>
 
-    <dami-barcode type value="123456733456"></dami-barcode>
-    <dami-barcode type="ean8" value="9234567"></dami-barcode>
+    <!-- <dami-barcode type value="123456733456"></dami-barcode> -->
+    <!-- <dami-barcode type="ean8" value="9234567"></dami-barcode> -->
+    <!-- <dami-barcode type="upca" value="98610867240"></dami-barcode> -->
+    <dami-barcode type="upce" value="986108"></dami-barcode>
 
     <script>
       document.addEventListener('myclick', () => {
