code11 and code39 barcode implemented.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <!-- <dami-barcode type value="123456733456"></dami-barcode> -->
     <!-- <dami-barcode type="ean8" value="9234567"></dami-barcode> -->
     <!-- <dami-barcode type="upca" value="98610867240"></dami-barcode> -->
-    <dami-barcode type="upce" value="986108"></dami-barcode>
+    <!-- <dami-barcode type="upce" value="986108"></dami-barcode> -->
+    <dami-barcode type="code11" value="986-108-64583"></dami-barcode>
+    <!-- <dami-barcode type="code39" value="X"></dami-barcode> -->
 
     <script>
       document.addEventListener('myclick', () => {
