barcode code93/extended completed.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
     <!-- <dami-barcode type="ean8" value="9234567"></dami-barcode> -->
     <!-- <dami-barcode type="upca" value="98610867240"></dami-barcode> -->
     <!-- <dami-barcode type="upce" value="986108"></dami-barcode> -->
-    <dami-barcode type="code11" value="986-108-64583"></dami-barcode>
+    <!-- <dami-barcode type="code11" value="986-108-64583"></dami-barcode> -->
     <!-- <dami-barcode type="code39" value="X"></dami-barcode> -->
+    <!-- <dami-barcode type="code39Extended" value="asim sapkota*"></dami-barcode> -->
+    <!-- <dami-barcode type="code93" value="ASIM-AT-3BIRD.NL"></dami-barcode> -->
+    <dami-barcode type="code93Extended" value="asim@3bird.nl as"></dami-barcode>
 
     <script>
       document.addEventListener('myclick', () => {
