qrcode generator completed.

--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
     <!-- <dami-barcode type="code39Extended" value="asim sapkota*"></dami-barcode> -->
     <!-- <dami-barcode type="code93" value="ASIM-AT-3BIRD.NL"></dami-barcode> -->
     <!-- <dami-barcode type="code93Extended" value="https://www.instagram.com/ranjita_khadka1/"></dami-barcode> -->
-    <dami-barcode type="code128" value="www.instagram.com/ranjita_khadka1/"></dami-barcode>
+    <!-- <dami-barcode type="code128" value="www.instagram.com/ranjita_khadka1/"></dami-barcode> -->
     <!-- <dami-barcode type="GS1-128" value="(01)12349876457490"></dami-barcode> -->
     <!-- <dami-barcode type="MSImod11" value="1234567"></dami-barcode> -->
     <!-- <dami-barcode type="postnet" value="12345678995"></dami-barcode> -->
+    <dami-qrcode value="I love my budi Ranjita ❤️" errorCorrection="L"></dami-qrcode>
+    <!-- <dami-qrcode value="https://www.instagram.com/the__prathamsapkota/" errorCorrection="L"></dami-qrcode> -->
 
     <script>
       document.addEventListener('myclick', () => {
