mask 7 preceedence error fixed.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- <dami-barcode type="GS1-128" value="(01)12349876457490"></dami-barcode> -->
     <!-- <dami-barcode type="MSImod11" value="1234567"></dami-barcode> -->
     <!-- <dami-barcode type="postnet" value="12345678995"></dami-barcode> -->
-    <dami-qrcode value="I love my budi Ranjita ❤️" errorCorrection="L"></dami-qrcode>
+    <dami-qrcode value="Ashish Don!" errorCorrection="L"></dami-qrcode>
     <!-- <dami-qrcode value="https://www.instagram.com/the__prathamsapkota/" errorCorrection="L"></dami-qrcode> -->
 
     <script>
